# hypercli

./: .gitignore  .history-verify  0001-Added-Partner-Page.-Minor-title-copy-change.patch  AGENT.md  AGENTS.md  CLAUDE.md  DRIFT.md  GAP.md  README.md  integration-audit.md  test_api_keys.py
cli/: README.md  pyproject.toml
cli/hypercli_cli/: __init__.py  agent.py  agents.py  claw.py  cli.py  embed.py  files.py  flow.py  instances.py  jobs.py  keys.py  llm.py  memory.py  memory_captions.py  memory_documents.py  onboard.py  output.py  renders.py  stt.py  voice.py  wallet.py  workspaces.py
cli/hypercli_cli/tui/: job_monitor.py
cli/tests/: test_agent_env_resolution.py  test_agent_subscribe_command.py  test_agents_budget_command.py  test_config_command.py  test_exec_shell_dryrun.py  test_flow_command.py  test_flow_visibility.py  test_jobs_list_tags.py  test_keys_command.py  test_llm_command.py  test_me_command.py  test_memory_captions.py  test_memory_command.py  test_memory_documents.py  test_openclaw_config.py  test_status_command.py  test_voice_command.py  test_wallet_command.py  test_wallet_migration_integration.py  test_workspaces_command.py
cli/tests/integration/: test_launch_dryrun.py
cli/tests/manual/: test_x402_subscription.sh
docs/: agents-openapi.json  authentication.mdx  docs.json  hyperclaw-openapi.json  index.mdx  openapi.json  quickstart.mdx
notify/: README.md  notify_client.py  notify_client.ts
scripts/: gen_template_docs.py
sdk/: README.md  pyproject.toml
site/: .gitignore  AGENTS.md  CACHE_MANAGEMENT.md  CLAUDE.md  LICENSE  README.md  env.dev  (+11 more)
(+1065 files in other folders)
