[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypercli-cli"
version = "0.9.1"
description = "CLI for HyperCLI - GPU orchestration and LLM API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "HyperCLI", email = "support@hypercli.com" }
]
dependencies = [
    "hypercli-sdk>=0.8.9",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "websocket-client>=1.6.0",
    "mutagen>=1.47.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
comfyui = [
    "hypercli-sdk[comfyui]>=0.8.9",
]
wallet = [
    "x402[httpx,evm]>=2.0.0",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    "argon2-cffi>=25.0.0",
    "qrcode[pil]>=7.4.0",
]
all = [
    "hypercli-sdk[comfyui]>=0.8.9",
    "x402[httpx,evm]>=2.0.0",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    "argon2-cffi>=25.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
hyper = "hypercli_cli.cli:cli"

[project.urls]
Homepage = "https://hypercli.com"
Documentation = "https://docs.hypercli.com"
Repository = "https://github.com/HyperCLI/hypercli"

[tool.hatch.build.targets.wheel]
packages = ["hypercli_cli"]

[tool.ruff]
line-length = 100
